kubernetes/ingress/synapse-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: synapse-headers
  namespace: synapse
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Host: matrix.ebruno.fr
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-redirect
  namespace: synapse
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`matrix.ebruno.fr`)
      kind: Rule
      services:
        - name: synapse
          port: 8008
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-ingress
  namespace: synapse
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.ebruno.fr`)
      kind: Rule
      middlewares:
        - name: synapse-headers
      services:
        - name: synapse
          port: 8008
  tls:
    certResolver: letsencrypt-ovh
